--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
             </div>
         </div>
     </div>
+    <main class="container-fluid">
+      <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded shadow-sm">
+        <img class="mr-3" src="pp.jpg" alt="" width="48" height="48">
+        <div class="lh-1">
+          <h6 class="mb-0 text-white lh-1">Developed by Peters Samuel</h6>
+          <small>for web developement contact Peters samuel on +234 8108699025, <br>
+            or email <i class="fa fa-envelope" aria-hidden="true"></i> petsamuel4@gmail.com
+           </small>
+        </div>
+      </div>
+  
+    </main>
 
     <main class="container-fluid">
         <div class="row">
@@ -204,12 +216,7 @@
       </a>
     </div>
 
-
-    <!-- Marketing messaging and featurettes
-  ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
-    <div class="container marketing">
+    <div class="container marketing padding">
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
@@ -305,6 +312,10 @@
 
                 <div class="p-4">
                     <h4 class="font-italic">Twitter</h4>
+                    <p>
+                      <a class="twitter-timeline" data-height="1000" data-theme="dark" href="https://twitter.com/TwitterDev/likes?ref_src=twsrc%5Etfw">Tweets Liked by @TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                     
+                    </p>
                     
                 </div>
 
@@ -323,7 +334,18 @@
 
     </main><!-- /.container -->
 
-
+    <main class="container padding">
+      <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded shadow-sm">
+        <img class="mr-3" src="pp.jpg" alt="" width="48" height="48">
+        <div class="lh-1">
+          <h6 class="mb-0 text-white lh-1">Developed by Peters Samuel</h6>
+          <small>for web developement contact Peters samuel on +234 8108699025, <br>
+            or email <i class="fa fa-envelope" aria-hidden="true"></i> petsamuel4@gmail.com
+           </small>
+        </div>
+      </div>
+  
+    </main>
 
 
 
