--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a class="link-secondary" href="#">Subscribe</a>
                 </div>
                 <div class="col-4 text-center">
-                    <a class="blog-header-logo text-dark" href="#"></a>
+                    <a class="blog-header-logo text-dark" href="#">Ankara pro DEMO</a>
                 </div>
                 <div class="col-4 d-flex justify-content-end align-items-center">
                     <a class="link-secondary" href="#" aria-label="Search">
@@ -149,7 +149,7 @@
   
     </main>
 
-    <main class="container-fluid">
+    <main class="container-fluid padding">
         <div class="row">
             <div class="col-md-8">
                 <h3 class="pb-4 mb-4 font-italic border-bottom">
@@ -170,9 +170,8 @@
 
           <div class="container">
             <div class="carousel-caption text-left">
-              <h1>Example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
-                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>slide show</h1>
+              <p></p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
             </div>
           </div>
@@ -184,9 +183,8 @@
 
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
-                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>Another slide show</h1>
+              <p></p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
             </div>
           </div>
@@ -198,9 +196,8 @@
 
           <div class="container">
             <div class="carousel-caption text-right">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
-                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>check out full gallery</h1>
+              <p></p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
@@ -220,31 +217,29 @@
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
-        <div class="col-lg-6">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+        <div class="col-md-6 col-sm-6 col-lg-6">
+          <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="woman.png"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" role="img" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-          </svg>
+           
+          </img>
 
-          <h2>Heading</h2>
+          <h2 style="font-family: cursive;">client review</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras
             mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris
             condimentum nibh.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="#" role="button">read full &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-6">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+        <div class="col-md-6 col-sm-6 col-lg-6">
+          <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="pp.jpg"
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" role="img" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-          </svg>
+           
+          </img>
 
-          <h2>Heading</h2>
+          <h2 style="font-family: cursive;">client review</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
             felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
             massa justo sit amet risus.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="#" role="button">Read full &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
@@ -387,6 +382,16 @@
         </div>
       </div>
     </div>
+
+    <div class="col-12 text-center">
+      <hr class="light">
+      <h6>&copy;copyright 2020 Bieefilled</h6>
+      Website by<a href="https://bieeportfolio.netlify.app" style="color: black;"> Peter Samuel</a>
+  </div>
+
+
+
+
       <script type="text/javascript">
          (function () {
            'use strict'
