--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="author" content="Hans McMurdy">
-      <title>Bootstrap 5 Offcanvas Template · Bootstrap</title>
+      <title>Akara pro</title>
       <meta name="title" content="#JavaScriptFirst">
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
